fixed a bug which caused the year slider to not function when selection all images, implemented a way to keep track of photo types after refresh and updated the plane_photo.js class to simplify the zoom events and fixed a bug where zooming could bring you out of bounds

--- a/css/60_photos.css
+++ b/css/60_photos.css
@@ -536,6 +536,16 @@ label.streetside-hires {
     transform-origin: 0 0;
 }
 
+.panoramax-wrapper .photo-attribution a:active {
+    color: #ff6f00;
+}
+
+@media (hover: hover) {
+    .panoramax-wrapper .photo-attribution a:hover {
+        color: #ff6f00;
+    }
+}
+
 .photo-wrapper {
     position: relative;
     background-color: #000;
